--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,28 +1,22 @@
-{% extends 'app/base.html' %}
+{% comment %} {% extends 'app/base.html' %}
 {% load static %}
 {% block title %}Login{% endblock title %}
 {% block main-content %}
-<div class="container">
- <div class="row my-3">
-  <div class="col-sm-6 offset-sm-3">
-   <h3>Login</h3>
-   <hr>
-   <form action="" method="post" novalidate class="shadow p-5">
-    <div class="mb-3">
-     <label for="exampleInputEmail1" class="form-label">Email</label>
-     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <div class="mb-3">
-     <label for="exampleInputPassword1" class="form-label">Password</label>
-     <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <small><a href="#">Forgot Password ?</a></small> <br>
-    <input type="submit" class="btn btn-primary mt-4" value="Login">
-    <br>
-    <div class="text-center text-primary fw-bold"><small>New to ShoppinglyX ? <a href="{% url 'customerregistration' %}"
-       class="text-danger">Create an Account</a> </small></div>
-   </form>
-  </div>
- </div>
-</div>
-{% endblock main-content %}
+
+{% endblock main-content %} {% endcomment %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form method="POST" action="">
+{% csrf_token %}
+{{form.as_p}}
+<input type="submit" value="login">
+</form>
+</body>
+</html>
