--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,22 +1,17 @@
-{% comment %} {% extends 'app/base.html' %}
+{% extends 'app/base.html' %}
 {% load static %}
 {% block title %}Login{% endblock title %}
 {% block main-content %}
-
-{% endblock main-content %} {% endcomment %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form method="POST" action="">
+<div class="signup-form">
+<form method="POST" action="">
+<h1>Login</h1>
 {% csrf_token %}
 {{form.as_p}}
 <input type="submit" value="login">
+<div class="bottom-text">
+Don't have accout? <a href="/customerregistration">Sign up</a>
+
+</div>
 </form>
-</body>
-</html>
+</div>
+{% endblock main-content %}
