Update html files

--- a/app/templates/app/booking.html
+++ b/app/templates/app/booking.html
@@ -1,3 +1,10 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block title %}Booking{% endblock title %}
+
+
+        {% block main-content %} 
+
+        <h1> Working on sprint 2 </h1>
+        {% endblock main-content %}
+        
