--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -230,7 +230,7 @@
                         <div class="card-body bg-teal text-center text-white">
                             <i class="fa fa-envelope fa-4x"></i>
                             <h2>Contact For Bookings</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque excepturi itaque praesentium. Accusamus beatae distinctio dolore eum iure magnam maiores maxime, natus quam repellendus saepe sint suscipit temporibus vitae voluptates?</p>
+                            <p>Find below customer service details of Travelyatri.com pakages portal, including phone and address. You can reach the below contact for new pakages booking, cancellation, refund, discounts, or for queries on Booking services. Besides contact details the page also offers information and links on services of Booking.</p>
                         </div>
                     </div>
                     <ul class="list-group">
@@ -241,10 +241,10 @@
                             Travel Yatri Pvt Ltd
                         </li>
                         <li class="list-group-item">
-                            Jubilee Hills , Hyderabad
+                            Bhatkekopul
                         </li>
                         <li class="list-group-item">
-                            Telangana , India
+                            Kathmandu,  Nepal
                         </li>
                     </ul>
                 </div>
