--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -43,16 +43,15 @@
                 </li>
 
                 <li class="nav-item px-3">
-                    <a href="/about" class="nav-link">About Us</a>
+                    <a href="/loginn" class="nav-link">Login</a>
                   </li>
+          
                   <li class="nav-item px-3">
-                    <a href="/photo" class="nav-link">Gallary</a>
+                    <a href="/customerregistration" class="nav-link">Register</a>
                   </li>
+
                   <li class="nav-item px-3">
                     <a href="/booking" class="nav-link">Booking</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a href="customerregistration" class="nav-link">customerregistration</a>
                   </li>
                         
 
@@ -87,31 +86,29 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-5 col-xs-12 about-company">
-      <h2>Heading</h2>
+      <h2>About Us</h2>
       <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
       <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
     </div>
     <div class="col-lg-3 col-xs-12 links">
       <h4 class="mt-lg-0 mt-sm-3">Links</h4>
         <ul class="m-0 p-0">
-          <li>- <a href="#">Lorem ipsum</a></li>
-          <li>- <a href="#">Nam mauris velit</a></li>
-          <li>- <a href="#">Etiam vitae mauris</a></li>
-          <li>- <a href="#">Fusce scelerisque</a></li>
-          <li>- <a href="#">Sed faucibus</a></li>
-          <li>- <a href="#">Mauris efficitur nulla</a></li>
+          <li>- <a href="#">Pokhara</a></li>
+          <li>- <a href="#">Kathmandu</a></li>
+          <li>- <a href="#">Mustang</a></li>
+          <li>- <a href="#">Rara</a></li>
         </ul>
     </div>
     <div class="col-lg-4 col-xs-12 location">
       <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-      <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+      <p>22, Kapan Nepal</p>
       <p class="mb-0"><i class="fa fa-phone mr-3"></i>981158565</p>
       <p><i class="fa fa-envelope-o mr-3"></i>travelyatri@gmail.com</p>
     </div>
   </div>
   <div class="row mt-5">
     <div class="col copyright">
-      <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+      <p class=""><small class="text-white-50">© 2021 Developed by sahadeb Rokaya and Anish Thapa.</small></p>
     </div>
   </div>
 </div>
