changes in text of html files

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -87,7 +87,7 @@
   <div class="row">
     <div class="col-lg-5 col-xs-12 about-company">
       <h2>About Us</h2>
-      <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+      <p class="pr-5 text-white-50">We have partnered with the tourism boards of some of the most exciting destinations across the world to offer you the best vacation values and experiences. From Alaska and Australia to Fiji and Florida, our travel agents have worked with our destination representatives to receive specialized training and certifications. They are eager to offer you their expertise to help you plan your dream vacation to any of our distinctive destinations. </p>
       <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
     </div>
     <div class="col-lg-3 col-xs-12 links">
@@ -101,7 +101,7 @@
     </div>
     <div class="col-lg-4 col-xs-12 location">
       <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-      <p>22, Kapan Nepal</p>
+      <p>Bhatkekopul Nepal</p>
       <p class="mb-0"><i class="fa fa-phone mr-3"></i>981158565</p>
       <p><i class="fa fa-envelope-o mr-3"></i>travelyatri@gmail.com</p>
     </div>
