--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -65,7 +65,7 @@
                         <div class="col-md-4">
                             <form  class="navbar-form navbar-left" role="search" action="/search">
                                 <div class="form-group">
-                            <input type="text" class="form-control rounded" placeholder="Search" aria-label="Search"
+                            <input type="text" class="form-control rounded" aria-label="Search"
                            aria-describedby="search-addon" name="Query" id="search" />
                                    
                                 </div>
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col">
                     <h1>Follow Travel Yatri</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, optio.</p>
+                    <p>Links of social .</p>
                     <i class="fab fa-facebook-square fa-4x m-3"></i>
                     <i class="fab fa-youtube fa-4x m-3"></i>
                     <i class="fab fa-twitter fa-4x m-3"></i>
@@ -169,7 +169,7 @@
                     <h5 class="display-4">
                         <span class="text-teal">Photo</span> Gallery
                     </h5>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, repudiandae.</p>
+                    <p class="lead">Different images of different destination.</p>
                 </div>
             </div>
             <div class="row">
@@ -251,13 +251,16 @@
                 <div class="col-md-6">
                     <div class="card mt-3">
                         <div class="card-header bg-teal text-white text-center">
+
+
+                        <!--Contact us-->
                             <h3>Contact Us</h3>
                         </div>
                         <div class="card-body bg-light">
                             <form  class="" method="post">
                             {% csrf_token %}
                                 <div class="form-group">
-                                    <input name="name" type="text" class="form-control" placeholder="Name">
+                                    <input name="name" type="name" class="form-control" placeholder="Name">
                                 </div>
                                 <div class="form-group">
                                     <input name="email" type="email" class="form-control" placeholder="Email">
