--- a/main/template/login.css
+++ b/main/template/login.css
@@ -1,127 +1,125 @@
-body{
-	margin: 10px 10px;
-	padding: 20px 20px 20px 20px;
-	background-attachment: fixed;
+body {
+    margin: 10px 10px;
+    padding: 20px 20px 20px 20px;
+    background-attachment: fixed;
     font-family: 'Courier New', Courier, monospace;
 }
-header{
-	position: relative;
-	max-width:100%;
-	margin: 10px auto;
+
+header {
+    position: relative;
+    max-width: 100%;
+    margin: 10px auto;
     background-color: rgb(161, 159, 125);
     padding-bottom: 85px;
     border-radius: 30px;
 }
-.logo{
-	margin: auto;
-	padding: 30px 20px;
-	float: left;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+
+.logo {
+    margin: auto;
+    padding: 30px 20px;
+    float: left;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-nav{
-	float: right;
+nav {
+    float: right;
     padding-left: 10px;
     padding-top: 0px;
     padding-bottom: 0;
 }
-.clearfix{
-	clear: both;
+
+.clearfix {
+    clear: both;
 }
 
-nav ul{
-	margin: 0px;
-	margin-bottom: 20px;
-	padding: 0;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	
-	
+nav ul {
+    margin: 0px;
+    margin-bottom: 20px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
- nav ul li{
-	list-style: none;
+nav ul li {
+    list-style: none;
     padding-left: 3px;
     padding-right: 3px;
-	
-}
-nav ul li a{
-	display: block;
-	margin: 10px 0;
-	padding: 10px 30px;
-	text-decoration: none;
-	color: black;
-   font-style: normal;
-   font-size: 15px;
-  
-}
-nav ul li a.active,
-nav ul li a:hover{
-	background:rgb(150, 82, 228);
-	color: rgba(207, 250, 14, 0.918);
-	-webkit-transition: 1s;
-	-o-transition: 1s;
-	transition: 1s;
 }
 
-.search{
+nav ul li a {
+    display: block;
+    margin: 10px 0;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: black;
+    font-style: normal;
+    font-size: 15px;
+}
+
+nav ul li a.active, nav ul li a:hover {
+    background: rgb(150, 82, 228);
+    color: rgba(207, 250, 14, 0.918);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    border-radius: 15px;
+}
+
+.search {
     padding-top: 11px;
 }
 
-.search input:hover{
-    background:rgb(128, 178, 235);
-	color: rgba(255, 255, 255, 0.918);
-	-webkit-transition: 1s;
-	-o-transition: 1s;
-	transition: 1s;
+.search input:hover {
+    background: rgb(3, 4, 5);
+    color: rgba(255, 255, 255, 0.918);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
 }
 
-input{
+input {
     height: 43px;
     width: 6cm;
     border-width: 2px;
     border-color: rgb(5, 223, 16);
     border-radius: 15px;
 }
-button{
+
+button {
     color: rgb(19, 130, 233);
     border-width: 2px;
     border-style: none;
     background: none;
     padding-left: 15px;
-    
-    
 }
-.h1{
+
+.h1 {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: darkorchid;
 }
 
-.login-container{
+.login-container {
     width: 100%;
     height: 100%;
-	display: table;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	/* padding-top: 100px;
+    display: table;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    /* padding-top: 100px;
     padding-left: 35%;
     padding-right: 35%;
     padding-bottom: 100px; */
-    
-    
 }
 
-.signin{
+.signin {
     text-align: center;
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 }
 
-.login-row{
+.login-row {
     width: 50%;
     padding-left: 25%;
     padding-top: 10%;
@@ -129,31 +127,32 @@ button{
     padding-bottom: 10%;
     border: 5px solid greenyellow;
     backface-visibility: visible;
-    background-image: url(/images/temple.jpeg);
-    
+    background-image: url(/images/wow.jpeg);
 }
-.signin-col{
+
+.signin-col {
     padding-left: 20px;
     display: table-cell;
     padding-right: 10px;
     width: 0px;
-    
 }
-.signin-col1{
+
+.signin-col1 {
     padding-right: 20px;
     display: table-cell;
     padding-right: 10px;
     width: 40%;
 }
 
-.sign-in-fb{
+.sign-in-fb {
     width: 300px;
     background-color: blue;
     color: white;
     height: 50px;
     border: 2px solid rgb(42, 44, 39);
 }
-.sign-in-google{
+
+.sign-in-google {
     width: 300px;
     height: 50px;
     background-color: rgb(250, 9, 9);
@@ -161,34 +160,33 @@ button{
     border: 2px solid rgb(42, 44, 39);
 }
 
-.or{
+.or {
     text-align: center;
     color: rgb(0, 0, 0);
     font-size: 30px;
 }
 
-form{
+form {
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.form{
+.form {
     height: 60px;
     width: 100%;
     border-radius: 10px;
 }
 
-.signin-button{
+.signin-button {
     width: 100%;
     height: 65px;
     color: rgb(0, 0, 0);
     background-color: rgb(3, 243, 23);
     border-radius: 10px;
-
 }
 
-.password-forgot{
+.password-forgot {
     text-align: left;
     font-size: small;
     padding-left: 10px;
@@ -202,27 +200,27 @@ form{
     background-color: turquoise;
 }
 
-.bottom-signin{
+.bottom-signin {
     padding-top: 20px;
-    
 }
-.fa-sign-in-alt{
+
+.fa-sign-in-alt {
     font-size: 20px;
 }
-.signinhere{
+
+.signinhere {
     font-size: 20px;
     text-decoration: bold;
 }
-.create-new-acc-btn{
+
+.create-new-acc-btn {
     padding-bottom: 5px;
     padding-top: 5px;
     color: rgb(255, 251, 0);
     float: right;
-    background-color:rgb(5, 113, 255);
+    background-color: rgb(5, 113, 255);
     padding-left: 10px;
     padding-right: 10px;
     text-decoration: none;
     font-size: 25px;
-
-    
 }
