--- a/main/template/style.css
+++ b/main/template/style.css
@@ -1,109 +1,112 @@
-body{
-	margin: 10px 10px;
-	padding: 20px 20px 20px 20px;
-	background-attachment: fixed;
+body {
+    margin: 10px 10px;
+    padding: 20px 20px 20px 20px;
+    background-attachment: fixed;
     font-family: 'Courier New', Courier, monospace;
 }
-header{
-	position: relative;
-	max-width:100%;
-	margin: 10px auto;
+
+header {
+    position: relative;
+    max-width: 100%;
+    margin: 10px auto;
     background-color: rgb(161, 159, 125);
     padding-bottom: 85px;
     border-radius: 30px;
 }
-.logo{
-	margin: auto;
-	padding: 30px 20px;
-	float: left;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+
+.logo {
+    margin: auto;
+    padding: 30px 20px;
+    float: left;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-nav{
-	float: right;
+nav {
+    float: right;
     padding-left: 10px;
     padding-top: 0px;
     padding-bottom: 0;
 }
-.clearfix{
-	clear: both;
+
+.clearfix {
+    clear: both;
 }
 
-nav ul{
-	margin: 0px;
-	margin-bottom: 20px;
-	padding: 0;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	
-	
+nav ul {
+    margin: 0px;
+    margin-bottom: 20px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
- nav ul li{
-	list-style: none;
+nav ul li {
+    list-style: none;
     padding-left: 3px;
     padding-right: 3px;
-	
 }
-nav ul li a{
-	display: block;
-	margin: 10px 0;
-	padding: 10px 30px;
-	text-decoration: none;
-	color: black;
-   font-style: normal;
-   font-size: 15px;
-  
+
+nav ul li a {
+    display: block;
+    margin: 10px 0;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: black;
+    font-style: normal;
+    font-size: 15px;
 }
-nav ul li a.active,
-nav ul li a:hover{
-	background:rgb(150, 82, 228);
-	color: rgba(207, 250, 14, 0.918);
-	-webkit-transition: 1s;
-	-o-transition: 1s;
-	transition: 1s;
+
+nav ul li a.active, nav ul li a:hover {
+    background: rgb(150, 82, 228);
+    color: rgba(207, 250, 14, 0.918);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
     border-radius: 15px;
 }
 
-.search{
+.search {
     padding-top: 11px;
 }
 
-.search input:hover{
-    background:rgb(3, 4, 5);
-	color: rgba(255, 255, 255, 0.918);
-	-webkit-transition: 1s;
-	-o-transition: 1s;
-	transition: 1s;
+.search input:hover {
+    background: rgb(3, 4, 5);
+    color: rgba(255, 255, 255, 0.918);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
 }
 
-input{
+input {
     height: 43px;
     width: 6cm;
     border-width: 2px;
     border-color: rgb(5, 223, 16);
     border-radius: 15px;
 }
-button{
+
+button {
     color: rgb(19, 130, 233);
     border-width: 2px;
     border-style: none;
     background: none;
     padding-left: 15px;
-    
-    
 }
+
 /* button:hover{ */
-    /* background:rgb(128, 178, 235);
+
+/* background:rgb(128, 178, 235);
 	color: rgba(255, 255, 255, 0.918);
 	-webkit-transition: 1s;
 	-o-transition: 1s;
 	transition: 1s;
 } */
 
-.slider{
+/* image slide */
+
+.slider {
     width: 100%;
     height: 700px;
     border-radius: 10px;
@@ -112,21 +115,22 @@ button{
     border-radius: 50px;
 }
 
-.slides{
+.slides {
     width: 500%;
     height: 700px;
     display: flex;
 }
 
-.slides input{
+.slides input {
     display: none;
 }
-.slide{
+
+.slide {
     width: 20%;
     transition: 2s;
 }
 
-.slide img{
+.slide img {
     width: 100%;
     height: 700px;
     padding-left: 20px;
@@ -135,7 +139,8 @@ button{
 }
 
 /*css for manual slide navigation*/
-.navigation-manual{
+
+.navigation-manual {
     position: absolute;
     width: 100%;
     margin-top: -70px;
@@ -143,7 +148,7 @@ button{
     justify-content: center;
 }
 
-.manual-btn{
+.manual-btn {
     border: 2px solid rgb(25, 0, 250);
     padding: 5px;
     border-radius: 10px;
@@ -152,98 +157,106 @@ button{
     transition: 1s;
 }
 
-.manual-btn:not(:last-child){
+.manual-btn:not(:last-child) {
     margin-right: 40px;
-
 }
 
-.manual-btn:hover{
+.manual-btn:hover {
     background: rgb(23, 9, 226);
-
 }
 
-#radio1:checked ~ .first{
+#radio1:checked~.first {
     margin-left: 0;
 }
-#radio2:checked ~ .first{
+
+#radio2:checked~.first {
     margin-left: -20%;
 }
-#radio3:checked ~ .first{
+
+#radio3:checked~.first {
     margin-left: -40%;
 }
-#radio4:checked ~ .first{
+
+#radio4:checked~.first {
     margin-left: -60%;
 }
 
 /*css for automatic navigation*/
-.navigation-auto{
+
+.navigation-auto {
     position: absolute;
     display: none;
     width: 100%;
     justify-content: center;
     margin-top: 460px;
-
 }
 
-.navigation-auto div{
+.navigation-auto div {
     border: 2px solid blueviolet;
     padding: 5px;
     border-radius: 10px;
     transition: 1s;
 }
 
-.navigation-auto div:not(:last-child){
+.navigation-auto div:not(:last-child) {
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background: blueviolet;
-}
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background: blueviolet;
-}
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background: blueviolet;
-}
-#radio4:checked ~ .navigation-auto .auto-btn4{
+#radio1:checked~.navigation-auto .auto-btn1 {
     background: blueviolet;
 }
 
-.discover{
+#radio2:checked~.navigation-auto .auto-btn2 {
+    background: blueviolet;
+}
+
+#radio3:checked~.navigation-auto .auto-btn3 {
+    background: blueviolet;
+}
+
+#radio4:checked~.navigation-auto .auto-btn4 {
+    background: blueviolet;
+}
+
+.discover {
     text-decoration: underline;
     text-align: center;
     padding: 40px 20px 20px 40px;
     width: 100%;
     background-color: rgb(115, 233, 207);
+    border: 3px solid black;
 }
-.places{
+
+.places {
     text-align: center;
 }
-.container{
+
+.container {
     width: 100%;
     margin: 10px 10px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.row{
+
+.row {
     padding: 10px 10px;
     float: left;
     width: 100%;
 }
 
-.col1{
+.col1 {
     padding-left: 10px;
+}
 
-}
-.col2{
+.col2 {
     padding-left: 10px;
 }
-.explore{
-    
+
+.explore {
     padding-right: 50px;
 }
 
-.explore-more{
+.explore-more {
     float: right;
     border-radius: 10px;
     border-width: 5px;
@@ -253,61 +266,62 @@ button{
     border-style: solid;
 }
 
-.explore-more:hover{
-    background:rgb(236, 253, 0);
-	color: rgba(255, 0, 0, 0.918);
-	-webkit-transition: 0.8s;
-	-o-transition: 0.8s;
-	transition: 0.8s;
+.explore-more:hover {
+    background: rgb(236, 253, 0);
+    color: rgba(255, 0, 0, 0.918);
+    -webkit-transition: 0.8s;
+    -o-transition: 0.8s;
+    transition: 0.8s;
 }
 
-
-.event-container{
-	width:100%;
-	display: table;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	padding: 10px 10px 10px 10px;
-	border:5px solid purple;
+.event-container {
+    width: 100%;
+    display: table;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px 10px 10px 10px;
 }
-.event-row{
-	margin: 10px 10px;
-	width: 100%;
+
+.event-row {
+    margin: 10px 10px;
+    width: 100%;
     padding-left: 10px;
 }
-.event-col{
-	display: table-cell;
+
+.event-col {
+    display: table-cell;
     height: 500px;
     width: 700px;
-	text-align: center;
-	vertical-align: middle;
-	background-color: rgb(230, 125, 221);
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgb(230, 125, 221);
 }
 
+/* event part slide */
 
-.event-slider{
+.event-slider {
     width: 100%;
     height: 500px;
     border-radius: 10px;
     overflow: hidden;
 }
 
-.event-slides{
+.event-slides {
     width: 500%;
     height: 500px;
     display: flex;
 }
 
-.event-slides input{
+.event-slides input {
     display: none;
 }
 
-.event-slide{
+.event-slide {
     width: 20%;
     transition: 2s;
 }
 
-.event-slide img{
+.event-slide img {
     width: 100%;
     height: 500px;
     padding-left: 20px;
@@ -316,7 +330,8 @@ button{
 }
 
 /*css for manual slide navigation*/
-.event-navigation-manual{
+
+.event-navigation-manual {
     position: absolute;
     width: 100%;
     margin-top: -70px;
@@ -324,7 +339,7 @@ button{
     justify-content: center;
 }
 
-.event-manual-btn{
+.event-manual-btn {
     border: 2px solid rgb(25, 0, 250);
     padding: 5px;
     border-radius: 10px;
@@ -333,149 +348,163 @@ button{
     transition: 1s;
 }
 
-.event-manual-btn:not(:last-child){
+.event-manual-btn:not(:last-child) {
     margin-right: 40px;
-
 }
 
-.event-manual-btn:hover{
+.event-manual-btn:hover {
     background: rgb(23, 9, 226);
-
 }
 
-#radio1:checked ~ .first{
+#radio1:checked~.first {
     margin-left: 0;
 }
-#radio2:checked ~ .first{
+
+#radio2:checked~.first {
     margin-left: -20%;
 }
-#radio3:checked ~ .first{
+
+#radio3:checked~.first {
     margin-left: -40%;
 }
-#radio4:checked ~ .first{
+
+#radio4:checked~.first {
     margin-left: -60%;
 }
 
 /*css for automatic navigation*/
-.event-navigation-auto{
+
+.event-navigation-auto {
     position: absolute;
     display: none;
     width: 100%;
     justify-content: center;
     margin-top: 460px;
-
 }
 
-.event-navigation-auto div{
+.event-navigation-auto div {
     border: 2px solid blueviolet;
     padding: 5px;
     border-radius: 10px;
     transition: 1s;
 }
 
-.event-navigation-auto div:not(:last-child){
+.event-navigation-auto div:not(:last-child) {
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background: blueviolet;
-}
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background: blueviolet;
-}
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background: blueviolet;
-}
-#radio4:checked ~ .navigation-auto .auto-btn4{
+#radio1:checked~.navigation-auto .auto-btn1 {
     background: blueviolet;
 }
 
-.thingstodo{
+#radio2:checked~.navigation-auto .auto-btn2 {
+    background: blueviolet;
+}
+
+#radio3:checked~.navigation-auto .auto-btn3 {
+    background: blueviolet;
+}
+
+#radio4:checked~.navigation-auto .auto-btn4 {
+    background: blueviolet;
+}
+
+.thingstodo {
     text-decoration: underline;
     text-align: center;
     padding: 40px 20px 20px 40px;
     width: 100%;
     background-color: rgb(115, 233, 207);
+    border: 3px solid black;
 }
 
 /* footer */
-.footer-container{
-	width:100%;
-	display: table;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	padding: 50px 10px 10px 10px;
-	position: relative;
+
+.footer-container {
+    width: 100%;
+    display: table;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 50px 10px 10px 10px;
+    position: relative;
 }
-.footer-row{
-	margin: 10px 10px;
-	width: 100%;
+
+.footer-row {
+    margin: 10px 10px;
+    width: 100%;
     column-gap: 5px;
     padding-left: 10px;
     padding-right: 10px;
 }
-.footer-column1{
-	display: table-cell;
+
+.footer-column1 {
+    display: table-cell;
     border: 10px solid black;
-	text-align: center ;
+    text-align: center;
     width: 33%;
-	background-color: rgb(26, 75, 94);
+    background-color: rgb(26, 75, 94);
     color: rgb(237, 253, 10);
 }
-.footer-column2{
-	display: table-cell;
+
+.footer-column2 {
+    display: table-cell;
     border: 10px solid black;
-	text-align: center;
+    text-align: center;
     width: 33%;
     color: rgb(237, 253, 10);
-	background-color: rgb(26, 75, 94);
+    background-color: rgb(26, 75, 94);
 }
-.footer-column3{
+
+.footer-column3 {
     border: 10px solid black;
-	display: table-cell;
-	text-align: center;
+    display: table-cell;
+    text-align: center;
     vertical-align: middle;
     width: 33%;
     color: rgb(237, 253, 10);
-	background-color: rgb(26, 75, 94);
+    background-color: rgb(26, 75, 94);
 }
-.tours{
+
+.tours {
     text-decoration: underline;
     color: rgb(255, 255, 255);
     padding-top: 20px;
 }
 
-.contact{
+.contact {
     text-align: justify;
     padding-left: 30px;
     padding-right: 30px;
 }
-.quicklink{
+
+.quicklink {
     text-align: justify;
     padding-top: 10px;
     padding-left: 80px;
     padding-right: 20px;
-    color: black; 
+    color: black;
 }
-.quicklink-html{
+
+.quicklink-html {
     color: rgb(253, 154, 5);
     text-decoration: none;
 }
 
-.stayintouch{
+.stayintouch {
     color: rgb(30, 253, 0);
     font-size: 25px;
     font-family: cursive;
 }
-.your-email{
+
+.your-email {
     height: 43px;
     width: 8cm;
     border-width: 2px;
     border-color: rgb(248, 0, 0);
     border-radius: 15px;
-   
 }
-.subscribe{
+
+.subscribe {
     color: rgb(252, 252, 252);
     border-width: 3px;
     border-radius: 20px;
@@ -483,7 +512,8 @@ button{
     background: rgb(235, 8, 8);
     padding-left: 15px;
 }
-.copyright{
+
+.copyright {
     padding-left: 0px;
     padding-right: 0px;
     padding-top: 20px;
@@ -493,5 +523,4 @@ button{
     text-align: center;
     font-size: large;
     font-family: 'Courier New', Courier, monospace;
-
 }
