Update photo issue

--- a/main/template/gallery.html
+++ b/main/template/gallery.html
@@ -45,17 +45,17 @@
       <input type="radio" name="radio-btn" id="radio4">
 
       <div class="slide first">
-        <img src="/images/Bhaktapur Durbar Square.jpg" alt="" class="first-slide">
+        <img src="/main/images/Bhaktapur Durbar Square.jpg" alt="" class="first-slide">
 
       </div>
       <div class="slide">
-        <img src="/images/lake-pokhara.jpg" alt="">
+        <img src="/main/images/lake-pokhara.jpg" alt="">
       </div>
       <div class="slide">
-        <img src="/images/janakpur.jpg" alt="">
+        <img src="/main/images/janakpur.jpg" alt="">
       </div>
       <div class="slide">
-        <img src="/images/image1.jpg" alt="">
+        <img src="/main/images/image1.jpg" alt="">
       </div>
 
       <!--automatic navigation-->
@@ -80,30 +80,30 @@
   <div class="gallery-txt">Gallery</div>
   <!-- 1st column -->
   <section class="first-col-img">
-    <img src="/discover_images/chitwan.jpg" alt="">
-    <img src="/events-images/holi.jpg" alt="">
+    <img src="/main/discover_images/chitwan.jpg" alt="">
+    <img src="/main/events-images/holi.jpg" alt="">
   </section>
   <!-- 2nd column -->
   <div class="container">
     <div class="row">
       <div class="column1">
-        <img src="/images/lake-pokhara.jpg" alt="">
-        <img src="/discover_images/lumbini.jpg" alt="">
-        <img src="/events-images/dashain.jpg" alt="">
-        <img src="/things-to-do/nepal nature enjoy.jpg" alt="">
+        <img src="/main/images/lake-pokhara.jpg" alt="">
+        <img src="/main/discover_images/lumbini.jpg" alt="">
+        <img src="/main/events-images/dashain.jpg" alt="">
+        <img src="/main/things-to-do/nepal nature enjoy.jpg" alt="">
       </div>
       <div class="column2">
-        <img src="/images/temple.jpeg" alt="">
-        <img src="/discover_images/kathmandu valley.jpeg" alt="">
-        <img src="/events-images/bisket jatra.jpg" alt="">
-        <img src="/things-to-do/mountaineering.jpeg" alt="">
+        <img src="/main/images/temple.jpeg" alt="">
+        <img src="/main/discover_images/kathmandu valley.jpeg" alt="">
+        <img src="/main/events-images/bisket jatra.jpg" alt="">
+        <img src="/main/things-to-do/mountaineering.jpeg" alt="">
       </div>
     </div>
   </div>
   <!-- 3rd column -->
   <section class="third-col-img">
-    <img src="/discover_images/pokhara.jpg" alt="">
-    <img src="/events-images/gaijatra.jpg" alt="">
+    <img src="/main/discover_images/pokhara.jpg" alt="">
+    <img src="/main/events-images/gaijatra.jpg" alt="">
   </section>
 
   <!-- load more images -->
