--- a/main/template/login.html
+++ b/main/template/login.html
@@ -51,7 +51,7 @@
             <div class="signin-col1">
                 <button class="sign-in-google"><i class="fab fa-google"></i> Sign In with Google</i></button>
             </div>
-            <p class="or">OR</p>
+            <p class="or"><b>OR</b></p>
 
             <form action="/signin">
                 <input class="form" type="text" placeholder="Email address">
