Update photo and css issue

--- a/main/template/aboutus.html
+++ b/main/template/aboutus.html
@@ -38,7 +38,7 @@
 
   <!-- top full image -->
   <div class="aboutus">
-    <img src="/main/images/everest.jpg" alt="Everest" class="aboutus-img">
+    <img src="everest.jpg" alt="Everest" class="aboutus-img">
     <div class="aboutus-img-desc"><b>Highest peak of the world -> Mt.Everest</b></div>
   </div>
   <br>
