--- a/main/template/index.html
+++ b/main/template/index.html
@@ -48,17 +48,17 @@
       <input type="radio" name="radio-btn" id="radio4">
 
       <div class="slide first">
-        <img src="/main/images/Bhaktapur Durbar Square.jpg" alt="" class="first-slide">
+        <img src="Bhaktapur Durbar Square.jpg" alt="" class="first-slide">
 
       </div>
       <div class="slide">
-        <img src="/main/images/lake-pokhara.jpg" alt="">
+        <img src="lake-pokhara.jpg" alt="">
       </div>
       <div class="slide">
-        <img src="/main/images/janakpur.jpg" alt="">
+        <img src="janakpur.jpg" alt="">
       </div>
       <div class="slide">
-        <img src="/main/images/image1.jpg" alt="">
+        <img src="image1.jpg" alt="">
       </div>
       <!-- <div class="slide">
           <img src="/images/village.jpg" alt="">
@@ -93,29 +93,29 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="/main/discover_images/kathmandu valley.jpeg" alt="" height="350px" width="500px">
+        <img src="kathmandu valley.jpeg" alt="" height="350px" width="500px">
         <div class="places"><b>Nyatapola temple - Bhaktapur</b></div>
       </div>
       <div class="col">
         <div class="col1">
-          <img src="/main/discover_images/chitwan.jpg" alt="" height="166px" width="250px">
+          <img src="chitwan.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>chitwan</b></div>
         </div>
         <br>
         <div class="col1">
-          <img src="/main/discover_images/lumbini.jpg" alt="" height="166px" width="250px">
+          <img src="lumbini.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>lumbini</b></div>
         </div>
       </div>
 
       <div class="col">
         <div class="col2">
-          <img src="/main/discover_images/pokhara.jpg" alt="" height="166px" width="250px">
+          <img src="pokhara.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>pokhara</b></div>
         </div>
         <br>
         <div class="col2">
-          <img src="/main/discover_images/sagarmatha.jpg" alt="" height="166px" width="250px">
+          <img src="sagarmatha.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>sagarmatha</b></div>
         </div>
       </div>
@@ -149,7 +149,7 @@
         <div class="event-container">
           <div class="event-row">
             <div class="event-col">
-              <img src="/main/events-images/dashain.jpg" alt="" height="500px" width="700px">
+              <img src="dashain.jpg" alt="" height="500px" width="700px">
             </div>
             <div class="event-col"></div>
             <p>Description of events</p>
@@ -161,7 +161,7 @@
       <div class="event-container">
         <div class="event-row">
           <div class="event-col">
-            <img src="/main/events-images/bisket jatra.jpg" alt="" height="500px" width="700px">
+            <img src="bisket jatra.jpg" alt="" height="500px" width="700px">
           </div>
           <div class="event-col">
             <p>Description of events</p>
@@ -173,7 +173,7 @@
       <div class="event-container">
         <div class="event-row">
           <div class="event-col">
-            <img src="/main/events-images/holi.jpg" alt="" height="500px" width="700px">
+            <img src="holi.jpg" alt="" height="500px" width="700px">
           </div>
           <div class="event-col">
             <p>Description of events</p>
@@ -185,7 +185,7 @@
       <div class="event-container">
         <div class="event-row">
           <div class="event-col">
-            <img src="/main/events-images/tihar.jpg" alt="" height="500px" width="700px">
+            <img src="tihar.jpg" alt="" height="500px" width="700px">
           </div>
           <div class="event-col">
             <p>Description of events</p>
@@ -222,29 +222,29 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="/main/things-to-do/mountaineering.jpeg" alt="" height="350px" width="500px">
+        <img src="mountaineering.jpeg" alt="" height="350px" width="500px">
         <div class="places"><b>Mountaineering</b></div>
       </div>
       <div class="col">
         <div class="col1">
-          <img src="/main/things-to-do/cycling.jpg" alt="" height="166px" width="250px">
+          <img src="cycling.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>Cycling</b></div>
         </div>
         <br>
         <div class="col1">
-          <img src="/main/things-to-do/nepal nature enjoy.jpg" alt="" height="166px" width="250px">
+          <img src="nepal nature enjoy.jpg" alt="" height="166px" width="250px">
           <div class="places"><b>View Enjoy</b></div>
         </div>
       </div>
 
       <div class="col">
         <div class="col2">
-          <img src="/main/things-to-do/pashupatinath tour.jpeg" alt="" height="166px" width="250px">
+          <img src="pashupatinath tour.jpeg" alt="" height="166px" width="250px">
           <div class="places"><b>Tirtha Yatra</b></div>
         </div>
         <br>
         <div class="col2">
-          <img src="/main/things-to-do/trekking.jpeg" alt="" height="166px" width="250px">
+          <img src="trekking.jpeg" alt="" height="166px" width="250px">
           <div class="places"><b>Trekking</b></div>
         </div>
       </div>
