--- a/app/templates/app/booking.html
+++ b/app/templates/app/booking.html
@@ -4,7 +4,57 @@
 
 
         {% block main-content %} 
+<div class="booking-form-box">
+<div class="radio-btn">
+<input type="radio" class="btn" name="check" checked="checked"><span>Roundtrip</span>
+<input type="radio" class="btn" name="check"><span>one way</span>
+<input type="radio" class="btn" name="check"><span>multy city</span>
 
-        <h1> Working on sprint 2 </h1>
-        {% endblock main-content %}
+</div>
+
+<div class="booking-form">
+<label >Flying form</label>
+<input type="text" class="form-control" placeholder="city or Airport">
+<label >Flying to</label>
+<input type="text" class="form-control" placeholder="city or Airport">
+<div class="input-grp">
+<label >Departing</label>
+<input type="date" class="form-control select-date" >
+</div>
+<div class="input-grp">
+<label >Returing</label>
+<input type="date" class="form-control select-date" >
+
+
+</div>
+
+<div class="input-grp">
+<label >Adults</label>
+<input type="number" class="form-control" value="1" >
+</div>
+
+
+<div class="input-grp">
+<label >Childern</label>
+<input type="number" class="form-control" value="0" >
+</div>
+
+
+<div class="input-grp">
+<label >Travel class</label>
+
+<select class="custom-select">
+
+
+<option value="1"> Economy class</option>
+<option value="1">Bus iness class</option>
+</select>
+</div>
+<div class="input-group">
+<button type="button" class="btn btn-primary flight">
+submit
+</button>
+</div>
+</div>
+ {% endblock main-content %}
         
