update style .css link

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{% static 'app/bootstrap/css/style.css' %}">
      <link rel="stylesheet" href="{% static 'app/bootstrap/css/customer.css' %}">
       <link rel="stylesheet" href="{% static 'app/bootstrap/css/footer.css' %}">
+     <link rel="stylesheet" href="{% static 'app/bootstrap/css/style2.css' %}">
+
     
      <link rel="stylesheet" href="{% static 'app/bootstrap/css/cus.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
