--- a/app/templates/app/booking.html
+++ b/app/templates/app/booking.html
@@ -4,7 +4,7 @@
 
 
         {% block main-content %} 
-<div class="booking-form-box">
+<div class="booking-form-boxs">
 <div class="radio-btn">
 <input type="radio" class="btn" name="check" checked="checked"><span>Roundtrip</span>
 <input type="radio" class="btn" name="check"><span>one way</span>
@@ -13,10 +13,10 @@
 </div>
 
 <div class="booking-form">
-<label >Flying form</label>
-<input type="text" class="form-control" placeholder="city or Airport">
-<label >Flying to</label>
-<input type="text" class="form-control" placeholder="city or Airport">
+<label >Travelling From </label>
+<input type="text" class="form-control" placeholder="Place Name">
+<label >Travelling To</label>
+<input type="text" class="form-control" placeholder="Place Name">
 <div class="input-grp">
 <label >Departing</label>
 <input type="date" class="form-control select-date" >
@@ -41,13 +41,14 @@
 
 
 <div class="input-grp">
-<label >Travel class</label>
+<label >Travel Types</label>
 
 <select class="custom-select">
 
 
-<option value="1"> Economy class</option>
-<option value="1">Bus iness class</option>
+<option value="1">Bus</option>
+<option value="1">Airplane</option>
+<option value="1">Car</option>
 </select>
 </div>
 <div class="input-group">
