--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -17,6 +17,7 @@
      <link rel="stylesheet" href="{% static 'app/bootstrap/css/cus.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="bootstrap/css/font-awesome-5.8.1.css">
+     <link rel="stylesheet" href="{% static 'app/bootstrap/css/style2.css' %}">
 
 
     
@@ -25,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-teal">
         <div class="container">
-            <a href="index.html" class="navbar-brand"> Travel yatri</a>
+            <a href="/index" class="navbar-brand"> Travel yatri</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#tarvel-navbar">
                 <span class="navbar-toggler-icon"> </span>
 
