--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -62,14 +62,13 @@
                     <h5 class="display-4">Search Your Destination</h5>
                     <p class="lead">See the details, images and booked the place you are interested to visit.</p>
                     <div class="row">
-                        <div class="col-md-4">
-                            <form  class="navbar-form navbar-left" role="search" action="/search">
-                                <div class="form-group">
-                            <input type="text" class="form-control rounded" aria-label="Search"
-                           aria-describedby="search-addon" name="Query" id="search" />
-                                   
-                                </div>
-                            </form>
+                         <div class="col-md-4">
+                           <div class="input-group rounded">
+                            <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                               <span class="input-group-text border-0" id="search-addon">
+                             <i class="fas fa-search"></i>
+   </span>
+</div>
                         </div>
                     </div>
                 </div>
@@ -134,8 +133,12 @@
         <img src="{{x.photo.url}}" alt="" class="card-img-top" height="200px">
          <div class="card-body">
           <h3 class="card-title">{{x.title}}</h3>
-         <p class="card-text">{{x.content}}</p>
-          <button class="btn btn-teal btn-sm">Read More</button>
+   
+           <p class="card-text">{{x.content}}</p>
+          <form action="{% url 'detail' x.id %}" method="post">
+          {% csrf_token %}
+          <input class="btn btn-teal btn-sm" type="submit" value="Read more">
+           </form>
          </div>
        </div>
       </div>
@@ -256,10 +259,10 @@
                         <!--Contact us-->
                             <h3>Contact Us</h3>
                         </div>
-                        <div class="card-body bg-light">
+                        <div class="card-body ">
                             <form  class="" method="post">
                             {% csrf_token %}
-                                <div class="form-group">
+                                <div class="form-group ">
                                     <input name="name" type="name" class="form-control" placeholder="Name">
                                 </div>
                                 <div class="form-group">
