--- a/main/CSS/destination.css
+++ b/main/CSS/destination.css
@@ -32,10 +32,6 @@ nav {
     padding-bottom: 0;
 }
 
-.clearfix {
-    clear: both;
-}
-
 nav ul {
     margin: auto;
     margin-bottom: 20px;
@@ -193,6 +189,8 @@ button {
 .book-now {
     width: 80%;
     height: 50px;
+    padding: 10px;
+    text-decoration: none;
     border: 3px solid black;
     border-radius: 10px;
     background-color: white;
