--- a/main/CSS/event.css
+++ b/main/CSS/event.css
@@ -1,10 +1,9 @@
 /* image slide */
 
 .eventslider {
-    width: 90%;
+    width: 100%;
     height: 600px;
     overflow: hidden;
-    margin-left: 5%;
 }
 
 .eventslides {
@@ -21,14 +20,14 @@
 
 .eventslide {
     width: 20%;
-    height: 400px;
+    height: 100%;
     transition: 2s;
     background-color: rgb(32, 223, 96);
 }
 
 .eventslide img {
-    width: 45%;
-    height: 400px;
+    width: 40%;
+    height: 95%;
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -83,15 +82,15 @@
 
 .desc-events {
     float: right;
-    width: 50%;
+    width: 55%;
     text-align: center;
-    padding-top: 10%;
+    vertical-align: middle;
     color: rgb(0, 0, 0);
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
+    margin-top: 10%;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
     .eventslider {
         height: 500px;
     }
@@ -99,10 +98,11 @@
         height: 300px;
     }
     .eventslide img {
-        height: 300px;
+        height: 92%;
     }
     .desc-events {
-        width: 55%;
+        width: 45%;
+        margin: 20px;
     }
     .eventnavigation-manual {
         margin-top: -140px;
@@ -110,53 +110,32 @@
     }
 }
 
-@media (max-width: 1000px) {
-    .eventslider {
-        width: 100%;
-        margin-left: 5px;
-    }
-    .eventnavigation-manual {
-        margin-top: -140px;
-        margin-left: -250px;
-    }
-}
 
 @media (max-width: 768px) {
     .eventslider {
-        width: 100%;
-        height: 250px;
-        margin-left: 0%;
-    }
-    .eventslides {
-        width: 500%;
-        height: 250px;
+        height: 300px;
     }
     .eventslide {
-        width: 20%;
         height: 250px;
     }
     .eventslide img {
         width: 45%;
-        height: 250px;
+        height: 92%;
     }
     .eventnavigation-manual {
-        margin-top: -40px;
+        margin-top: -180px;
         margin-left: -180px;
     }
     .desc-events {
         font-size: 15px;
-        padding-top: 5%;
+        width: 38%;
+        margin: 10px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 568px) {
     .eventslider {
-        width: 100%;
-        height: 200px;
-    }
-    .eventslides {
-        width: 500%;
-        height: 200px;
+        height: 250px;
     }
     .eventslide {
         width: 20%;
@@ -164,17 +143,18 @@
     }
     .eventslide img {
         width: 45%;
-        height: 200px;
+        height: 91%;
     }
     .eventnavigation-manual {
-        margin-top: -40px;
-        margin-left: -140px;
+        margin-top: -220px;
+        margin-left: -10px;
     }
     .eventmanual-btn:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 5px;
     }
     .desc-events {
         font-size: 10px;
-        padding-top: 5%;
+        width: 30%;
+        margin: 10px;
     }
 }
