--- a/main/CSS/gallery.css
+++ b/main/CSS/gallery.css
@@ -306,7 +306,7 @@ button {
 #loadMore button {
     width: 100%;
     margin: 10px;
-    padding: 8px 45%;
+    padding: 8px 4%;
     background-color: rgb(202, 123, 123);
     border-radius: 10px;
     border: 3px solid rgb(77, 72, 65);
@@ -648,7 +648,7 @@ button {
     }
     /* gallery */
     .gallery-txt {
-        margin-top: 20px;
+        margin-top: 35px;
     }
     .first-col-img img {
         width: 120px;
@@ -698,5 +698,33 @@ button {
     }
     .copyright {
         font-size: 10px;
+    }
+}
+
+@media (max-width: 450px){
+    /* footer */
+    .tours {
+        font-size: 8px;
+    }
+    .contact {
+        font-size: 6px;
+    }
+    .quicklink {
+        font-size: 8px;
+        padding-top: 3px;
+        padding-left: 3px;
+    }
+    .quicklink-html {
+        font-size: 5px;
+    }
+    .your-email {
+        width: 2cm;
+        height: 15px;
+    }
+    .stayintouch {
+        font-size: 8px;
+    }
+    .copyright {
+        font-size: 8px;
     }
 }
