--- a/main/CSS/register.css
+++ b/main/CSS/register.css
@@ -178,3 +178,21 @@ form .btn-primary {
         display: flex;
     }
 }
+
+@media (max-width:568px){
+    .g-3 {
+        padding-left: 20px;
+    }
+    
+    .country{
+        padding-left: 20px;
+    }
+    
+    .form-select{
+        padding-left: 20px;
+    }
+    
+    .mb-3 {
+        padding-left: 20px;
+    }
+}
